fix mobile issue overflow hamburger

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -11,7 +11,7 @@ html{
     font-family: 'Roboto', sans-serif;
   
   }
-  .NavParent{
+  body{
     overflow-x: hidden;
   }
   header{
@@ -126,19 +126,20 @@ html{
     height: 100vh;
     position: absolute; top: 0;
     right: 0;
+    display: none;
     background: #eee;
-    display: flex;
-    transform: translateX(55rem);
+    /* transform: translateX(55rem); */
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     box-shadow: -.5rem 0 1rem rgba(0,0,0,.2);
-    z-index: 1500;
     transition: transform ease-in-out 1s;
   }
   
   .open .nav-list{
     transform: translateX(0);
+    z-index: 1500;
+    display: flex;
   }
   
   .nav-item{
